--- a/src/app/user/components/event-detail/event-detail.component.html
+++ b/src/app/user/components/event-detail/event-detail.component.html
@@ -40,9 +40,16 @@
             </div>
       
             <div class="d-flex mt-4">
-              <button class="btn btn-primary flex-grow-1 mr-2" style="border-radius: 25px;" (click)="onRegister()">
-                {{isRegistered() ? 'You are already registered' : 'Register'}}
-              </button>
+              @if (event()?.participants !== 0) {
+                <button class="btn btn-primary flex-grow-1 mr-2" style="border-radius: 25px;" (click)="onRegister()">
+                  {{isRegistered() ? 'You are already registered' : 'Register'}}
+                </button>
+              } @else {
+                <div class="alert alert-danger mt-4">
+                  This event is completly full of people
+                </div>
+              }
+              
             </div>
 
             @if (successMessageRegister()) {
