--- a/src/app/user/components/event-detail/event-detail.component.css
+++ b/src/app/user/components/event-detail/event-detail.component.css
@@ -23,3 +23,15 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
   padding-bottom: 10px;
 }
+
+.modal-content {
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.form-range {
+  accent-color: #007bff;
+}
+
+.form-label {
+  font-weight: bold;
+}
