--- a/src/app/admin/components/event-list/event-list.component.html
+++ b/src/app/admin/components/event-list/event-list.component.html
@@ -19,7 +19,7 @@
           >
           <div class="card-body d-flex flex-column text-white">
             <h5 class="card-title font-weight-bold">{{ event.name }}</h5>
-            <p class="card-text">{{ event.place }} - {{ event.date }}</p>
+            <p class="card-text">{{ event.address }} - {{ event.date }}</p>
             <p class="h5 text-warning mt-auto">{{ event.price }} €</p>
     
             <div class="d-flex justify-content-between mt-3">
