--- a/src/app/admin/components/modify-event/modify-event.component.html
+++ b/src/app/admin/components/modify-event/modify-event.component.html
@@ -20,9 +20,21 @@
     
     <!-- Lugar del Evento -->
     <div class="form-group">
-      <label for="place" class="form-label text-white">Place</label>
-      <input type="text" id="place" [(ngModel)]="event.place" name="place" required 
-             class="form-control mb-2" placeholder="Enter event place">
+      <label for="address" class="form-label text-white">Address</label>
+      <input type="text" id="address" [(ngModel)]="event.address" name="address" required 
+             class="form-control mb-2" placeholder="Enter event address">
+    </div>
+
+    <div class="form-group">
+      <label for="lat" class="form-label text-white">Latitud</label>
+      <input type="number" id="lat" [(ngModel)]="event.lat" name="lat" required 
+             class="form-control mb-2" placeholder="Enter latitud">
+    </div>
+
+    <div class="form-group">
+      <label for="lng" class="form-label text-white">Longitud</label>
+      <input type="number" id="lng" [(ngModel)]="event.lng" name="lng" required 
+             class="form-control mb-2" placeholder="Enter longitud">
     </div>
 
     <!-- Descripción del Evento -->
