--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,19 +7,35 @@
         <ul class="nav">
           @if (isAuthenticated()) {
             <li class="nav-item">
+              <a routerLink="" class="nav-link text-white">Events</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-white">Welcome, {{getUsername()}}</a>
             </li>
-          }
-          <li class="nav-item">
-            <a routerLink="" class="nav-link text-white">Events</a>
-          </li>
-          @if (!isAuthenticated()) {
-            <li class="nav-item">
-              <a mat-flat-button class="text-white" (click)="openLoginModal()">Login</a>
-            </li>
-          } @else {
             <li class="nav-item">
               <a [routerLink]="['/myProfile', userId()]" class="nav-link text-white">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a mat-flat-button class="text-white" (click)="onLogout()">Logout</a>
+            </li>
+          }
+          @if (!isAuthenticated() && !isAdminAuth()) {
+            <li class="nav-item">
+              <a routerLink="" class="nav-link text-white">Events</a>
+            </li>
+            <li class="nav-item">
+              <a mat-flat-button class="text-white me-3" (click)="openLoginModal()">Login</a>
+            </li>
+            <li class="nav-item">
+              <a mat-flat-button class="text-white" (click)="openAdminLoginModal()">Admin</a>
+            </li>
+          } 
+          @if (isAdminAuth()) {
+            <li class="nav-item">
+              <a class="nav-link text-white">Welcome, {{getAdminName()}}</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="admin" class="nav-link text-white">My Events</a>
             </li>
             <li class="nav-item">
               <a mat-flat-button class="text-white" (click)="onLogout()">Logout</a>
