--- a/src/app/user/components/profile/profile.component.html
+++ b/src/app/user/components/profile/profile.component.html
@@ -8,7 +8,6 @@
         </div>
         <div class="card-body p-5 bg-light">
           <div class="row">
-            <!-- Información del usuario -->
             <div class="col-md-6 mb-4">
               <h4 class="text-primary mb-3">Personal Information</h4>
               <ul class="list-unstyled">
@@ -23,7 +22,6 @@
               </div>
             </div>
 
-            <!-- Redes sociales -->
             <div class="col-md-6 mb-4">
               <h4 class="text-primary mb-3">Social Media</h4>
               <div class="social-icons d-flex justify-content-start">
@@ -34,11 +32,10 @@
             </div>
           </div>
           
-          <!-- Eventos del usuario -->
           <div class="row">
             <div class="col-md-12">
               <h4 class="text-primary mb-3">My Events</h4>
-              @if (userEventsId.length > 0) {
+              @if (userEventsId.length >= 0) {
                 <ul class="list-group">
                   @for (event of eventByIdSignal(); track $index) {
                     <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -53,7 +50,8 @@
                     </li>
                   }
                 </ul>
-              } @else {
+              } 
+              @if(userEventsId.length === 0) {
                 <p class="text-muted">You are not registered in any event.</p>
               }
             </div>
