--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,14 @@
 header {
-    background-color: rgba(0, 0, 0, 0.8); /* Un fondo oscuro semitransparente */
+    background-color: #000000;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+}
+
+footer {
+    background-color: #000000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.logo{
+  height: 60px;
+}
   
