--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="min-vh-100 d-flex flex-column">
-  <header class="w-100 bg-dark text-white py-4 shadow"> <!-- Ancho 100% -->
+  <header class="w-100 text-white py-4 shadow"> 
     <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="h3 fw-bold">Eventify</h1>
+      <div class="d-flex align-items-center">
+        <img src="../assets/logo/logo2.png" alt="logo" class="logo me-4">
+      </div>
   
       <nav>
         <ul class="nav">
@@ -52,9 +54,9 @@
     </div>
   </main>
 
-  <footer class="w-100 bg-dark text-white py-4"> 
+  <footer class="w-100 text-white py-4"> 
     <div class="container text-center">
-      <p class="mb-0">&copy; 2024 Eventify. All rights reserved.</p>
+      <img src="../assets/logo/logo2.png" alt="logo" class="logo me-4">
     </div>
   </footer>
 </div>
