--- a/src/app/user/components/event-detail/event-detail.component.html
+++ b/src/app/user/components/event-detail/event-detail.component.html
@@ -1,8 +1,7 @@
 @if (event()) {
     <section class="map-wrapper">
 
-      <!--
-        <app-map [singleEvent]="event()"/>-->
+        <app-map [singleEvent]="event()"/>
     </section>
 
     <div class="text-center mt-5">
