--- a/src/app/user/components/event-list-for-users/event-list-for-users.component.html
+++ b/src/app/user/components/event-list-for-users/event-list-for-users.component.html
@@ -5,11 +5,11 @@
     </div>
 </section>
 
-<section class="events container mt-4">
+<section class="events container mt-5">
 
   <div class="row">
     <div class="col-12">
-      <h2 class="text-center text-white">Events</h2>
+      <h2 class="text-center text-white display-4">Events</h2>
     </div>
   </div>
 
@@ -31,31 +31,31 @@
       <div class="row">
         @for (event of filteredEvents(); track $index) {
           <ng-container>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="card border-0 rounded-lg shadow-lg h-100" style="background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">
-                <img 
-                  [src]="'data:image/jpeg;base64,' + event.eventImage" 
-                  [alt]="event.name" 
-                  class="card-img-top"
-                  style="object-fit: cover; height: 200px; border-top-left-radius: 8px; border-top-right-radius: 8px;"
-                >
-                <div class="card-body d-flex flex-column text-white">
+            <div class="col-md-6 col-lg-4 mb-5">
+              <div class="card event-card h-100">
+                <div class="card-img-wrapper">
+                  <img 
+                    [src]="'data:image/jpeg;base64,' + event.eventImage" 
+                    [alt]="event.name" 
+                    class="card-img-top"
+                  >
+                </div>
+                <div class="card-body text-white d-flex flex-column">
                   <h5 class="card-title font-weight-bold">{{ event.name }}</h5>
                   <p class="card-text">{{ event.address }} - {{ event.date | date:'longDate' }}</p>
-                  @if (event.price === '0') {
+                  @if (event.price === 0) {
                     <p class="h5 text-warning mt-auto">Free</p>
                   } @else {
                     <p class="h5 text-warning mt-auto">{{event.price | currency: 'EUR':'symbol'}}</p>
                   }
-                  <div class="d-flex justify-content-between mt-3">
-                    <button [routerLink]="['/event-details', event.id]" class="btn btn-info flex-grow-1 mr-1" style="border-radius: 20px;">View</button>
+                  <div class="d-flex justify-content-between mt-4">
+                    <button [routerLink]="['/event-details', event.id]" class="btn btn-primary view-btn">View</button>
                   </div>
                 </div>
               </div>
             </div>
           </ng-container>
         }
-
       </div>
     </div>
 
